# bookLovin

./: .env  .gitignore  .pre-commit-config.yaml  README.md  justfile  package-lock.json  tickets.rst
backend/: .env  README.md  justfile  pyproject.toml
backend/app/: main.py
backend/app/services/: post_service.py
backend/booklovin/: errors.py  main.py
backend/booklovin/api/v1/: auth.py  books.py  confessions.py  journal.py  letters.py  posts.py  profile.py  studio.py
backend/booklovin/core/: config.py  database.py  settings.py  storage.py  utils.py
backend/booklovin/models/: base.py  books.py  comments.py  confessions.py  errors.py  journals.py  letters.py  post.py  profile.py  reactions.py  studio.py  types.py  users.py
backend/booklovin/services/: database.py  errors.py  interfaces.py  post_mock.py  post_service.py  streak_logic.py  users_service.py
backend/booklovin/services/database/: __init__.py
backend/booklovin/services/database/mock/: confessions.py  core.py  journal.py  post.py  test_setup.py  users.py
backend/booklovin/services/database/mongo/: books.py  confessions.py  core.py  journal.py  letters.py  post.py  profile.py  studio.py  test_setup.py  users.py
backend/booklovin/services/database/redis/: core.py  post.py  test_setup.py  users.py
backend/booklovin/services/mock/: core.py  post.py  users.py
backend/booklovin/services/mongo/: core.py  post.py  users.py
backend/booklovin/tests/: conftest.py  test_auth.py  test_journal.py  test_journal_streak.py  test_post.py  test_post_adv.py  test_post_comments.py  test_post_comments_security.py
backend/booklovin/utils/: apply_env.py  auth.py  user_token.py
backend/scripts/: dump_enums.py  populator.py  populator2.py
backend/scripts/kulala/: auth.http  xss_test.http
frontend/: .eslintrc.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  landingPage.jsx  main.jsx
frontend/src/api/: aiCreationmock.js  api.js  axiosInstance.js  books.js  confession.js  journal.js  letters.js  mockBookService.js  posts.js  profile.js
frontend/src/components/: AuthCard.jsx  BookSpine.jsx  BookshelfCarousel.jsx  ConfirmModal.jsx  DarkLightIcon.jsx  DraggableShelf.jsx  Feed.jsx  Feed.tests.jsx  JustFinishedTemplate.jsx  Layout.jsx  MoodContext.jsx  MoodSelector.jsx  Navbar.jsx  ParticleBackground.jsx  ParticlesBackground.jsx  PostCard.jsx  PostCard.test.jsx  PostEditor.jsx  ProtectedRoute.jsx  Sidebar.jsx  TestIcon.jsx  auth.js
frontend/src/components/journal/: EditorToolbar.jsx  RichTextEditor.jsx  index.js
frontend/src/config/: journal.js  moods.js  reactions.js
frontend/src/constants/: enumTypes.js  labels.js  letterType.js
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAuth.js  useAutoSave.js  useDashboardData.js  useJournalEntries.js  useLetters.js
frontend/src/pages/: HomePage.jsx  LandingPage.jsx
frontend/src/pages/BookSearchPage/: BookSearchPage.jsx
frontend/src/pages/ConfessionPage/: ConfessionCard.jsx  ConfessionEditor.jsx  ConfessionWallPage.jsx  SingleConfessionPage.jsx
frontend/src/redux/: booksSlice.js  confessionSlice.js  creationsSlice.js  journalSlice.js  letterSlice.js  postsSlice.js  postsSlice.test.jsx  profileSlice.js  store.js  studioSlice.js
frontend/src/styles/: animations.css  themes.css
frontend/src/utils/: ParticlesFactory.js  confessionMock.js  journalMock.js  journalUtils.js  mockLetter.js
scripts/: run_backend_typing_tests  run_backend_unit_tests  run_backend_unit_tests_allbackends  run_frontend_unit_tests  svganimator  validator_db_protocols.py
(+29 files in other folders)
