[tool.poetry]
name = "booklovin"
version = "0.1.0"
description = "Backend for BookLovin app using FastAPI"
authors = [
    "Fab",
    "Shu",
]
readme = "README.md"

[tool.poetry.scripts]
start = "uvicorn booklovin.main:app --reload"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
motor = "^3.7.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
passlib = "^1.7.4"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"

[tool.poetry.dependencies.pymongo]
extras = [
    "srv",
]
version = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
pdoc = "^15.0.2"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

