[tool.poetry]
name = "booklovin"
version = "0.1.0"
description = "Backend for BookLovin app using FastAPI"
authors = [
    "Fab",
    "Shu",
]
readme = "README.md"
exclude = [
    "booklovin/tests",
]

[tool.poetry.scripts]
start = "uvicorn booklovin.main:app --reload"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
motor = "^3.7.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
passlib = "^1.7.4"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"

[tool.poetry.dependencies.pymongo]
extras = [
    "srv",
]
version = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
pdoc = "^15.0.2"
mypy = "^1.15.0"
vulture = "^2.14"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.redis.dependencies]
redis = "^6.0.0"

[tool.ruff]
line-length = 140
preview = false
src = [
    "booklovin",
]
exclude = [
    ".git",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_default_fixture_loop_scope = "function"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
exclude = [
    "booklovin/tests/*",
]

[tool.vulture]
min_confidence = 61
ignore_names = [
    "response_model",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "R0903",
    "W0603",
    "C0116",
    "C0411",
    "E0402",
]

[tool.pylint.BASIC]
good-names = [
    "db",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
